# mobile_manipulator

./: README.md
soft_mobile_manipulator_control/: CMakeLists.txt  package.xml
soft_mobile_manipulator_control/config/: config_seg.yaml  control.yaml  localization.yaml
soft_mobile_manipulator_control/helper_funcs/: curves.py  kinematics.py  load_sym_functions.py  plot_graphs.py  plot_segment_general.py  utils.py
soft_mobile_manipulator_control/launch/: gazebo.launch.py  husky_playpen.launch.py
soft_mobile_manipulator_control/launch/soft_mobile_manipulator_control/: gazebo.launch.py  husky_playpen.launch.py
soft_mobile_manipulator_control/src/: imu_pose.py  imu_to_euler_node.py  joint_control_node.cpp  matrix.py  tf.cpp  tf.py  transform.py
soft_mobile_manipulator_control/symbolic_soft/: generate_symbolic_n_seg_functions.py  generate_symbolic_transformation_matrix.py  load_symbolic_n_seg_functions.py  rot_matrix.txt  transl_vector.txt
soft_mobile_manipulator_description/: CMakeLists.txt  package.xml
soft_mobile_manipulator_description/urdf/: cobra.urdf.xacro  husky.urdf.xacro  husky_macro.urdf.xacro
spot_manipulator_config/: CMakeLists.txt  README.md  config.json  package.xml
spot_manipulator_config/config/ros_control/: controller.yaml  gazebo_ros_control.yaml  ros_control.yaml
spot_manipulator_config/launch/: arm_spot.launch  bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch  spawn_spot.launch
spot_manipulator_config/launch/include/: move_base.launch
spot_manipulator_description/: CMakeLists.txt  package.xml
spot_manipulator_description/launch/: description.launch
spot_manipulator_description/urdf/: Dynamixel_spot_arm.gazebo  Dynamixel_spot_arm.xacro  accessories.urdf.xacro  spot.urdf  spot.urdf.xacro  spot_arm.gazebo  spot_arm.trans  spot_arm.xacro  spot_leg.urdf.xacro
